# lockrail

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SKILL.md  deny.toml  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml  security.yml
crates/lockrail-audit/: Cargo.toml  README.md
crates/lockrail-audit/src/: lib.rs
crates/lockrail-cli/: Cargo.toml  LICENSE-APACHE  README.md
crates/lockrail-cli/src/: inject.rs  main.rs  sync.rs
crates/lockrail-cli/tests/: harness_flow.rs  lrap_flow.rs  oss_e2e.rs
crates/lockrail-protocol/: Cargo.toml  LICENSE-MIT  README.md
crates/lockrail-protocol/src/: lib.rs  presets.rs  seal.rs
crates/lockrail-proxy/: Cargo.toml  README.md
crates/lockrail-proxy/src/: ca.rs  install.rs  lib.rs  proxy.rs
crates/lockrail-relay/: Cargo.toml  README.md
crates/lockrail-relay/src/: lib.rs
crates/lockrail-vault/: Cargo.toml  README.md
crates/lockrail-vault/src/: lib.rs
docs/: AI_INTEGRATION.md  ARCHITECTURE.md  LICENSING.md  LIMITATIONS.md  LOCKRAIL_COMPLETE_ARCHITECTURE.md  LRAP.md  MACOS_BUILD_TROUBLESHOOTING.md  QUICKSTART.md  READINESS.md  RELEASE.md  THREAT_MODEL.md  YC_STYLE_POSITIONING.md
scripts/: full-scan.sh  hygiene-scan.py  macos-build-fix.sh
