[workspace]
members = [
    "crates/lockrail-protocol",
    "crates/lockrail-vault",
    "crates/lockrail-audit",
    "crates/lockrail-relay",
    "crates/lockrail-proxy",
    "crates/lockrail-cli",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["Het Mehta <hi@hetmehta.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lockrail/lockrail"
rust-version = "1.96"
homepage = "https://lockrail.xyz"
documentation = "https://lockrail.xyz/docs"

[workspace.lints.rust]
future-incompatible = "warn"
nonstandard_style = { level = "deny", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = 10 }
redundant_clone = { level = "deny", priority = 9 }
needless_borrow = { level = "deny", priority = 8 }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
ed25519-dalek = { version = "2.2", features = ["rand_core", "serde"] }
rand = "0.8"
rand_core = "0.6"
aes-gcm = { version = "0.10", features = ["aes"] }
argon2 = "0.5"
base64ct = { version = "1.8", features = ["alloc"] }
sha2 = "0.10"
uuid = { version = "1.18", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
url = { version = "2.5", features = ["serde"] }
zeroize = { version = "1.8", features = ["derive"] }
secrecy = { version = "0.10", features = ["serde"] }
dirs = "6.0"
hex = "0.4"
tempfile = "3.23"
http = "1.3"
tower = "0.5"
portable-pty = "0.9"
fs2 = "0.4"
rcgen = { version = "0.13", features = ["pem"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
webpki-roots = "0.26"
