[package]
name = "lockrail-relay"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Policy-enforcing relay with replay protection for Lockrail"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["security", "relay", "ssrf", "ai"]
categories = ["security", "network-programming"]
include = ["src/**", "Cargo.toml", "README.md"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
fs2 = { workspace = true }
lockrail-protocol = { version = "0.3.7", path = "../lockrail-protocol" }
lockrail-vault = { version = "0.3.7", path = "../lockrail-vault" }
lockrail-audit = { version = "0.3.7", path = "../lockrail-audit" }

[dev-dependencies]
tempfile = { workspace = true }
secrecy = { workspace = true }
