[package]
name = "lockrail-vault"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Encrypted local vault and agent-key storage for Lockrail"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["security", "vault", "crypto", "secrets"]
categories = ["security", "cryptography"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE-MIT", "LICENSE-APACHE"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
base64ct = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
ed25519-dalek = { workspace = true }
dirs = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
fs2 = { workspace = true }
lockrail-protocol = { version = "0.3.3", path = "../lockrail-protocol" }

[dev-dependencies]
tempfile = { workspace = true }
